<!--
  ~ Copyright (©) 2016-2025 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.jefftharris.passwdsafe.PasswdSafeOpenFileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/open_file_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwd_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file"
            app:layout_constraintWidth_max="488dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:imeOptions="actionGo"
                android:inputType="textMultiLine|textPassword"
                android:minHeight="48dp"
                android:scrollHorizontally="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/yubikey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/yubikey"
            android:drawablePadding="6dp"
            android:text="@string/yubikey"
            app:layout_constraintBottom_toTopOf="@+id/yubikey_debugging"
            app:layout_constraintEnd_toStartOf="@+id/save_password"
            app:layout_constraintHeight_min="48dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwd_input"
            app:layout_constraintWidth_max="320dp"/>

        <CheckBox
            android:id="@+id/save_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/save_password"
            app:layout_constraintBottom_toTopOf="@+id/yubikey_debugging"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="48dp"
            app:layout_constraintStart_toEndOf="@+id/yubikey"
            app:layout_constraintTop_toBottomOf="@+id/passwd_input"
            app:layout_constraintWidth_max="320dp"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="save_password,yubikey"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/yubikey_debugging"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/yubikey_debugging"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toTopOf="@+id/yubikey_nfc_disabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/options"/>

        <TextView
            android:id="@+id/yubikey_nfc_disabled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/yubikey_nfc_disabled"
            app:layout_constraintBottom_toTopOf="@+id/yubikey_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yubikey_debugging"/>

        <TextView
            android:id="@+id/yubikey_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/yubikey_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yubikey_nfc_disabled"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/ro_save_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="yubikey_error,save_password"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/read_only_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/saved_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ro_save_options"/>

        <TextView
            android:id="@+id/saved_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            app:drawableLeftCompat="@drawable/ic_fingerprint"
            app:drawableStartCompat="@drawable/ic_fingerprint"
            app:layout_constraintBottom_toTopOf="@+id/yubi_progress_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/read_only_msg"/>

        <TextView
            android:id="@+id/yubi_progress_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/press_yubikey"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toTopOf="@+id/open"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saved_password"/>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/open"
            app:layout_constraintEnd_toStartOf="@+id/open"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/open"/>

        <Button
            android:id="@+id/open"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:minWidth="112dp"
            android:text="@string/open"
            app:layout_constraintBottom_toTopOf="@+id/file_open_help_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/progress"
            app:layout_constraintTop_toBottomOf="@+id/yubi_progress_text"/>

        <TextView
            android:id="@+id/file_open_help_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/file_open_help"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimaryNoDisable"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/open"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
