...
    <string name="licenses">Licenses</string>
    <string name="logging_tags">Logging tags</string>
    <string name="logging_tags_desc">A space-separated list of logging tags, * for all tags, or an empty string to disable</string>
    <string name="new_drive_file">New Drive File</string>
    <string name="no_files">No Files</string>
    <string name="none">None</string>
    <string name="open">Open</string>
    <string name="onedrive">OneDrive</string>
    <string name="owncloud">ownCloud</string>
    <string name="parent_directory">Parent Directory</string>
    <string name="preferences">Preferences</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="release_notes_title">Release Notes</string>
...
